Fixed bug #48469 (ldap_get_entries() memory leaks on empty search results)